// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`catalogReducers > addAttributeHierarchy > should add attribute hierarchy 1`] = `
{
  "attributeHierarchies": [
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_account.account",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 1",
        "id": "7e453e94-ab42-4664-a86a-9c205de04cad",
        "production": true,
        "ref": {
          "identifier": "7e453e94-ab42-4664-a86a-9c205de04cad",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 1",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/7e453e94-ab42-4664-a86a-9c205de04cad",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "f_city.id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 2",
        "id": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
        "production": true,
        "ref": {
          "identifier": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 2",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_city.id",
            "type": "attribute",
          },
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.region_id",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 3",
        "id": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_2",
        "production": true,
        "ref": {
          "identifier": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_2",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 3",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_2",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_activity.activity",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 4",
        "id": "53f4159b-d2f2-4c32-b778-945cf868436e",
        "production": true,
        "ref": {
          "identifier": "53f4159b-d2f2-4c32-b778-945cf868436e",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 4",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/53f4159b-d2f2-4c32-b778-945cf868436e",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "dt_closedate_timestamp.day",
            "type": "attribute",
          },
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 5",
        "id": "8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
        "production": true,
        "ref": {
          "identifier": "8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 5",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_account.account",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.department_id_new_item",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 6",
        "id": "7e453e94-ab42-4664-a86a-9c205de04cad_new",
        "production": true,
        "ref": {
          "identifier": "7e453e94-ab42-4664-a86a-9c205de04cad_new",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 6",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/7e453e94-ab42-4664-a86a-9c205de04cad",
      },
      "type": "attributeHierarchy",
    },
  ],
}
`;

exports[`catalogReducers > addAttributeHierarchy > should add attribute hierarchy into empty state 1`] = `
{
  "attributeHierarchies": [
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_account.account",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.department_id_new_item",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 6",
        "id": "7e453e94-ab42-4664-a86a-9c205de04cad_new",
        "production": true,
        "ref": {
          "identifier": "7e453e94-ab42-4664-a86a-9c205de04cad_new",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 6",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/7e453e94-ab42-4664-a86a-9c205de04cad",
      },
      "type": "attributeHierarchy",
    },
  ],
}
`;

exports[`catalogReducers > deleteAttributeHierarchy > should delete attribute hierarchy 1`] = `
{
  "attributeHierarchies": [
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_account.account",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 1",
        "id": "7e453e94-ab42-4664-a86a-9c205de04cad",
        "production": true,
        "ref": {
          "identifier": "7e453e94-ab42-4664-a86a-9c205de04cad",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 1",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/7e453e94-ab42-4664-a86a-9c205de04cad",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "f_city.id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 2",
        "id": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
        "production": true,
        "ref": {
          "identifier": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 2",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_activity.activity",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 4",
        "id": "53f4159b-d2f2-4c32-b778-945cf868436e",
        "production": true,
        "ref": {
          "identifier": "53f4159b-d2f2-4c32-b778-945cf868436e",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 4",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/53f4159b-d2f2-4c32-b778-945cf868436e",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "dt_closedate_timestamp.day",
            "type": "attribute",
          },
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 5",
        "id": "8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
        "production": true,
        "ref": {
          "identifier": "8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 5",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
      },
      "type": "attributeHierarchy",
    },
  ],
}
`;

exports[`catalogReducers > updateAttributeHierarchy > should update attribute hierarchy 1`] = `
{
  "attributeHierarchies": [
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_account.account",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 1",
        "id": "7e453e94-ab42-4664-a86a-9c205de04cad",
        "production": true,
        "ref": {
          "identifier": "7e453e94-ab42-4664-a86a-9c205de04cad",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 1",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/7e453e94-ab42-4664-a86a-9c205de04cad",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "f_city.id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 2",
        "id": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
        "production": true,
        "ref": {
          "identifier": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 2",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_1",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_city.id",
            "type": "attribute",
          },
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.region_id",
            "type": "attribute",
          },
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 3",
        "id": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_2",
        "production": true,
        "ref": {
          "identifier": "6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_2",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy changed",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/6474f8829a36409d8ebc72abbc60e750_attribute_hierarchies_2",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "f_owner.department_id",
            "type": "attribute",
          },
          {
            "identifier": "attr.f_activity.activity",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 4",
        "id": "53f4159b-d2f2-4c32-b778-945cf868436e",
        "production": true,
        "ref": {
          "identifier": "53f4159b-d2f2-4c32-b778-945cf868436e",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 4",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/53f4159b-d2f2-4c32-b778-945cf868436e",
      },
      "type": "attributeHierarchy",
    },
    {
      "attributeHierarchy": {
        "attributes": [
          {
            "identifier": "dt_closedate_timestamp.day",
            "type": "attribute",
          },
          {
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "type": "attribute",
          },
        ],
        "deprecated": false,
        "description": "Attribute Hierarchy 5",
        "id": "8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
        "production": true,
        "ref": {
          "identifier": "8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
          "type": "attributeHierarchy",
        },
        "title": "Attribute Hierarchy 5",
        "type": "attributeHierarchy",
        "unlisted": false,
        "uri": "https://staging.dev-latest.stg11.panther.intgdc.com/api/v1/entities/workspaces/6474f8829a36409d8ebc72abbc60e750/attributeHierarchies/8ca2a2f1-f85b-4c81-b19c-bb22273c33c2",
      },
      "type": "attributeHierarchy",
    },
  ],
}
`;
